--- a/shakespeare-plays/Shakespeare_Bot.ipynb
+++ b/shakespeare-plays/Shakespeare_Bot.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import adjusted_rand_score"
    ]
   },
   {
@@ -747,6 +750,34 @@
    ],
    "source": [
     "shakespeare_db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(shakespeare_db['PlayerLine'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uniques = vectorizer.get_feature_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_array = X.toarray()"
    ]
   },
   {
