--- a/shakespeare-plays/Shakespeare_Bot.ipynb
+++ b/shakespeare-plays/Shakespeare_Bot.ipynb
@@ -2,17 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
+    "import cPickle as pickle #data processing\n",
+    "from collections import Counter #tokenization\n",
+    "import keras #ML\n",
+    "import postprocessing as pr #helper\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import adjusted_rand_score"
+    "from sklearn.metrics import adjusted_rand_score\n",
+    "from keras.preprocessing.text import Tokenizer"
    ]
   },
   {
@@ -782,10 +795,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def keywords(docs, k):\n",
+    "    tok = Tokenizer()\n",
+    "    tok.fit_on_texts(docs)\n",
+    "    tfidf_matrix = tok.texts_to_matrix(docs,mode='tfidf')\n",
+    "    tfidf_scores = np.sum(tfidf_matrix, axis=0)\n",
+    "    return sorted(dict(zip(tok.word_index,tfidf_scores)).items(),key=lambda x:x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs = [\"The sky is blue\", \"I love the sky\", \"let's kill some seagulls\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('the', 0.0),\n",
+       " ('blue', 0.9162907318741551),\n",
+       " ('i', 0.9162907318741551),\n",
+       " ('love', 0.9162907318741551),\n",
+       " (\"let's\", 0.9162907318741551),\n",
+       " ('kill', 0.9162907318741551),\n",
+       " ('some', 0.9162907318741551),\n",
+       " ('seagulls', 0.9162907318741551),\n",
+       " ('sky', 1.3862943611198906),\n",
+       " ('is', 1.3862943611198906)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keywords(docs,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def alt_keywords(docs, k):\n",
+    "    lines = [line.rstrip() for line in open('SmartStoplist.txt')]\n",
+    "    stop_list = set(lines)\n",
+    "    vectorizer = TfidfVectorizer(stop_words=stop_list)\n",
+    "    tfidf_matrix = vectorizer.fit_transform(docs)\n",
+    "    tfidf_scores = np.sum(tfidf_matrix,axis=0)\n",
+    "    tfidf_scores = np.ravel(tfidf_scores)\n",
+    "    return sorted(dict(zip(vectorizer.get_feature_names(),tfidf_scores)).items(),key=lambda x:x[1], reverse=True)[:k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/sklearn/feature_extraction/text.py:300: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['1971', 'ain', 'aren', 'cornell', 'couldn', 'cs', 'didn', 'doesn', 'don', 'english', 'ftp', 'hadn', 'hasn', 'haven', 'isn', 'list', 'll', 'mon', 'pub', 'salton', 'shouldn', 'smart', 'stop', 've', 'wasn', 'weren', 'won', 'word', 'wouldn'] not in stop_words.\n",
+      "  'stop_words.' % sorted(inconsistent))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('sky', 1.2106970162125832),\n",
+       " ('blue', 0.7959605415681652),\n",
+       " ('love', 0.7959605415681652),\n",
+       " ('kill', 0.7071067811865476),\n",
+       " ('seagulls', 0.7071067811865476)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alt_keywords(docs,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_vocab(lst,txt): #tokenizing\n",
+    "    vocabcount, vocab = Counter(w for txt in lst for w in txt.)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
